--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
 asgiref==3.9.1
+Brotli==1.1.0
+click==8.1.8
+dj-database-url==3.0.1
 Django==4.2.23
+gunicorn==23.0.0
+h11==0.16.0
+packaging==25.0
+psycopg2-binary==2.9.10
 sqlparse==0.5.3
 typing_extensions==4.14.1
+uvicorn==0.35.0
+whitenoise==6.9.0
